--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,10 +10,12 @@ server {
   location / {
     try_files $uri $uri/ /index.html =404;
   }
-  location /api {
-    resolver 127.0.0.1 valid=30s;
-
-    proxy_pass http://apiserver;
-  }
-  break;
+  location /api/ {
+              proxy_pass         http://apiserver/;
+              proxy_redirect     off;
+              proxy_set_header   Host $host;
+              proxy_set_header   X-Real-IP $remote_addr;
+              proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header   X-Forwarded-Host $server_name;
+          }
 }
