--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream apiserver {
-    server psk-backend.azurewebsites.net:80;
+    server 52.242.215.25:8080;
 }
 
 server {
@@ -13,6 +13,7 @@ server {
   location /api {
     resolver 127.0.0.1 valid=30s;
 
+    proxy_pass_request_headers on;
     proxy_pass http://apiserver;
   }
   break;
