--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,44 @@
-server {
-  listen 80;
-  root /usr/share/nginx/html;
-  index index.html index.htm;
+daemon off;
+worker_processes 1;
+user nobody nobody;
+error_log /tmp/error.log;
+pid /tmp/nginx.pid;
+
+events {
+  worker_connections 1024;
+}
+
+http {
+
+  client_body_temp_path /tmp/client_body;
+  fastcgi_temp_path /tmp/fastcgi_temp;
+  proxy_temp_path /tmp/proxy_temp;
+  scgi_temp_path /tmp/scgi_temp;
+  uwsgi_temp_path /tmp/uwsgi_temp;
 
 
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
 
-  location / {
-    try_files $uri $uri/ /index.html =404;
+  server {
+    listen 80;
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
+    access_log /tmp/access.log;
+    error_log /tmp/error.log;
+
+    location / {
+      try_files $uri $uri/ /index.html =404;
+    }
+    location /api {
+      proxy_set_header X-Forwarded-For $remote_addr;
+      proxy_set_header X-Forwarded-Port $server_port;
+      proxy_set_header Host $http_host;
+      proxy_http_version 1.1;
+      proxy_pass http://127.0.0.1:8080;
+
+    }
+    break;
   }
-  location /api {
-    proxy_set_header X-Forwarded-For $remote_addr;
-    proxy_set_header X-Forwarded-Port $server_port;
-    proxy_set_header Host $http_host;
-    proxy_http_version 1.1;
-    proxy_pass http://127.0.0.1:8080;
-
-    resolver 127.0.0.1 valid=30s;
-
-  }
-  break;
 }
