--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,20 @@
+
+upstream apiserver {
+    server backend:8080;
+}
+
 server {
   listen 80;
   root /usr/share/nginx/html;
   index index.html index.htm;
 
-  access_log /tmp/access.log;
-  error_log /tmp/error.log;
-
   location / {
     try_files $uri $uri/ /index.html =404;
   }
   location /api {
-    proxy_set_header X-Forwarded-For $remote_addr;
-    proxy_set_header X-Forwarded-Port $server_port;
-    proxy_set_header Host $http_host;
-    proxy_http_version 1.1;
-    proxy_pass http://127.0.0.1:8080;
+    resolver 127.0.0.1 valid=30s;
 
+    proxy_pass http://apiserver;
   }
   break;
 }
-
