--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,13 @@ services:
 
   backend:
     image: pskdev.azurecr.io/backend:latest
-    container_name: psk_backend
+    container_name: backend
     environment:
       - SPRING_PROFILES_ACTIVE=demo
     ports:
       - 8080:8080
     depends_on:
       - db
-    links:
-      - db
-    volumes:
-      - /var/log/psk:/var/log
   db:
     image: mongo:4.0
     container_name: db
