--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,15 @@ version: '3'
 services:
 
   backend:
-    image: pskdev.azurecr.io/backend:latest
-    container_name: backend
-    environment:
-      - SPRING_PROFILES_ACTIVE=demo
+    image: repo.treescale.com/pskdev/pskdev/backend:latest
+    container_name: fe_backend
     ports:
       - 8080:8080
     depends_on:
       - db
   db:
     image: mongo:4.0
-    container_name: db
+    container_name: fe_db
     ports:
       - 27017:27017
     volumes:
