--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   backend:
     image: repo.treescale.com/pskdev/backend:latest
     container_name: fe_backend
+    environment:
+      - SPRING_PROFILES_ACTIVE=demo
     ports:
       - 8080:8080
     depends_on:
