--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
+    "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
+    "@angular/compiler": "7.2.15",
+    "@angular/core": "7.2.15",
     "@angular/forms": "~7.1.0",
     "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.1.0",
@@ -24,19 +24,22 @@
     "@angular/router": "~7.1.0",
     "@auth0/angular-jwt": "^2.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
-    "bootstrap": "^4.2.1",
+    "angular-bootstrap-md": "^7.5.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "popper.js": "^1.15.0",
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "^7.1.4",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
