--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "angular-bootstrap-md": "^7.5.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-toastr": "^9.1.1",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "popper.js": "^1.15.0",
-    "jquery": "^3.4.1"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
