--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-toastr": "^9.1.1",
