--- a/package.json
+++ b/package.json
@@ -14,33 +14,35 @@
   "dependencies": {
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.2.0",
-    "@angular/common": "~7.1.0",
+    "@angular/common": "~7.2.15",
     "@angular/compiler": "7.2.15",
     "@angular/core": "7.2.15",
-    "@angular/forms": "~7.1.0",
+    "@angular/forms": "~7.2.15",
     "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
+    "@angular/platform-browser": "~7.2.15",
+    "@angular/platform-browser-dynamic": "~7.2.15",
+    "@angular/router": "~7.2.15",
     "@auth0/angular-jwt": "^2.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "angular-bootstrap-md": "^7.5.2",
+    "angular-calendar": "^0.27.8",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.8",
+    "date-fns": "^1.30.1",
     "jquery": "^3.4.1",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-toastr": "^9.1.1",
     "popper.js": "^1.15.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.1.4",
+    "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "~7.1.0",
+    "@angular/language-service": "~7.2.15",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -55,6 +57,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.2.4"
   }
 }
