--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     image: repo.treescale.com/pskdev/backend:latest
     container_name: fe_backend
     environment:
-      - SPRING_PROFILES_ACTIVE=virtual
+      - SPRING_PROFILES_ACTIVE=demo
     ports:
       - 8080:8080
     depends_on:
       - db
   db:
     image: mongo:4.0
-    container_name: fe_db
+    container_name: db
     ports:
       - 27017:27017
     volumes:
