--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.8",
     "date-fns": "^1.30.1",
+    "flatpickr": "^4.5.7",
     "jquery": "^3.4.1",
+    "ng-pick-datetime": "^7.0.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.4",
     "ngx-toastr": "^9.1.1",
+    "open-iconic": "^1.1.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
